Replaced logo, added new logo to tab icon, fixed bug where whitespace rendered around border of logo in top left corner

--- a/web/src/styles/homepage.css
+++ b/web/src/styles/homepage.css
@@ -4,6 +4,8 @@
     padding: 0;
     box-sizing: border-box;
     font-family: 'Arial', sans-serif;
+
+    border: none;
 }
 
 body {
